# ggml

./: CMakeLists.txt  CONTRIBUTING.md  README.md  ggml.pc.in
.github/: copilot-instructions.md
.github/workflows/: ci.yml  format-check.yml  format.yml  release.yml
build_gpu/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ggml-config.cmake  ggml-version.cmake  ggml.pc
build_gpu/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/gpt-2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/gpt-j/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/magika/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/mnist/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/sam/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/simple/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/examples/yolo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu/src/: Makefile  cmake_install.cmake
build_gpu/src/ggml-cpu/: Makefile  cmake_install.cmake
build_gpu/src/ggml-hip/: Makefile  cmake_install.cmake
build_gpu/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/gpt-2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/gpt-j/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/magika/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/mnist/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/sam/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/simple/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/examples/yolo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gpu2/src/: Makefile  cmake_install.cmake
build_gpu2/src/ggml-cpu/: Makefile  cmake_install.cmake
build_gpu2/src/ggml-hip/: Makefile  cmake_install.cmake
build_gpu2/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ci/: run.sh
cmake/: ggml-config.cmake.in
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  connecting-graphs-kernel.cpp  demo.c  hg-tutorial-simple-ctx.cpp
examples/gpt-2/: main-backend.cpp  main-sched.cpp
examples/mnist/: mnist-common.cpp
examples/sam/: sam.cpp
examples/simple/: CMakeLists.txt  simple-add-sched.cpp  simple-add.cpp  simple-backend.cpp  simple-hetero-sched.cpp  simple-vector-pipeline.cpp  simple-vector.cpp
examples/yolo/: yolov3-tiny.cpp
include/: ggml-hsa.h
scripts/: release.sh  sync-llama-am.sh  sync-llama.last  sync-llama.sh  sync-whisper-am.sh  sync-whisper.last  sync-whisper.sh
src/: CMakeLists.txt  ggml-backend-reg.cpp
src/ggml-cuda/: ggml-cuda.cu
src/ggml-hsa/: .clang-format  AGENTS.md  CMakeLists.txt  KERNEL_PREGENERATION.md  README.md  add.cpp  aie-kernel-compiler.cpp  aie-kernel-compiler.hpp  aie-kernel.cpp  aie-kernel.hpp  binary-ops.cpp  binbcast.cpp  check-format.sh  common.hpp  cpy.cpp  env_setup.sh  example-kernel-config.json  ggml-hsa-gen-kernels.py  ggml-hsa.cpp  host-ops.cpp  host-ops.hpp  kernel-compiler.cpp  kernel-compiler.hpp  kernel-discovery.cpp  kernel-discovery.hpp  kernel_compiler.cpp  kernel_compiler.hpp  kernel_discovery.cpp  kernel_discovery.hpp  kernel_registry.cpp  kernels.hpp  minimal-kernel-config.json  mul-mat.cpp  mul_mat.cpp  requirements.txt  requirements_extras.txt  ruff.toml  type-traits.hpp  unary-ops.cpp
src/ggml-hsa/cmake/: FindMLIR-AIE.cmake  FindPeano.cmake  ggml_hsa_utils.cmake
src/ggml-hsa/cmake/Modules/: FindPeano.cmake
src/ggml-hsa/iron/: CMakeLists.txt
src/ggml-hsa/iron-kernels/: CMakeLists.txt  __init__.py  add.py  build.py  compile.py  compiler.py  ggml_hsa_common.py  mul_mat.py
src/ggml-hsa/iron-kernels/aie2/: mul_mat.py  unary_ops.py
src/ggml-hsa/iron/kernels/: __init__.py  binary_ops.py  ggml-aie.hpp  unary_ops.cc  unary_ops.py
src/ggml-hsa/iron/kernels/aie2/: binary_ops.py  mm.cc  mul_mat.py  unary_ops.cc  unary_ops.py  zero.cc
src/ggml-hsa/iron/utils/: __init__.py  build.py  core_function.py  tensor_desc.py
src/ggml-hsa/iron_kernels/: CMakeLists.txt  __init__.py  add.py  binary_ops.py  binbcast.py  compiler.py  mul_mat.py  unary_ops.cc  unary_ops.py  utils.py
src/ggml-hsa/iron_kernels/compiler/: CMakeLists.txt  __init__.py  compiler.py
src/ggml-hsa/kernels/: CMakeLists.txt  __init__.py  add.py  argmax.py  binary_ops.cc  binary_ops.py  build.py  build_iron.py  clamp.cc  clamp.py  core_function.py  count_equal.py  cross_entropy_loss.cc  cross_entropy_loss.py  gemm.py  ggml-aie.hpp  ggml_hsa_common.py  kernel.py  mat_mul.py  mul_mat.py  scale.cc  scale.py  soft_max.py  softmax.cc  softmax.py  tensor_desc.py  unary_ops.cc  unary_ops.py  utils.py
src/ggml-hsa/kernels/add/: Makefile  add.py
src/ggml-hsa/kernels/aie2/: __init__.py  lut_based_ops.h  mat_mul.py  mm.cc  mul_mat.py  softmax.cc  softmax.py  zero.cc
src/ggml-hsa/kernels/aie2p/: mm.cc  zero.cc
src/ggml-hsa/kernels/iron/: CMakeLists.txt  __init__.py  aie_kernel_math.h  aie_kernel_utils.h  argmax.cc  argmax.py  binary_ops.cc  binary_ops.py  clamp.cc  clamp.py  count_equal.cc  count_equal.py  cross_entropy_loss.cc  cross_entropy_loss.py  gemm.py  ggml-aie.hpp  scale.cc  scale.py  softmax.cc  softmax.py  unary_ops.cc  unary_ops.py  utils.py
src/ggml-hsa/kernels/iron/aie2/: mm.cc  zero.cc
src/ggml-hsa/kernels/iron/aie2p/: mm.cc  zero.cc
src/ggml-vulkan/: ggml-vulkan.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-mul-mat-hsa.cpp  test-mul-mat.cpp  test-mul-mat0.c  test-roll.cpp
tests/ggml-hsa/: CMakeLists.txt  test-backend-ops-mnist.cpp  test-mul-mat-hsa-prof.cpp  test-vector-hsa.cpp
